<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:divider="@color/transparent"
    app:allowDividerBelow="false">
    <io.legado.app.lib.prefs.Preference
        android:icon="@drawable/ic_cfg_source"
        android:title="@string/book_source_manage"
        android:key="bookSourceManage"
        android:summary="@string/book_source_manage_desc"
        app:iconSpaceReserved="false"/>
    <io.legado.app.lib.prefs.Preference
        android:icon="@drawable/ic_cfg_source"
        android:title="@string/txt_toc_rule"
        android:key="txtTocRuleManage"
        android:summary="@string/config_txt_toc_rule"
        app:iconSpaceReserved="false"/>
    <io.legado.app.lib.prefs.Preference
        android:icon="@drawable/ic_cfg_replace"
        android:title="@string/replace_purify"
        android:key="replaceManage"
        android:summary="@string/replace_purify_desc"
        app:iconSpaceReserved="false"/>
    <io.legado.app.lib.prefs.Preference
        android:icon="@drawable/ic_cfg_replace"
        android:title="@string/tts_script"
        android:key="ttsScriptManage"
        android:summary="@string/tts_script_desc"
        app:iconSpaceReserved="false"/>
    <io.legado.app.lib.prefs.Preference
        android:icon="@drawable/ic_translate"
        android:title="@string/dict_rule"
        android:key="dictRuleManage"
        android:summary="@string/config_dict_rule"
        app:iconSpaceReserved="false"/>
    <io.legado.app.lib.prefs.NameListPreference
        android:icon="@drawable/ic_cfg_theme"
        android:entries="@array/theme_mode"
        android:title="@string/theme_mode"
        android:key="themeMode"
        android:summary="@string/theme_mode_desc"
        android:defaultValue="0"
        android:entryValues="@array/theme_mode_v"
        app:iconSpaceReserved="false"/>
    <io.legado.app.lib.prefs.SwitchPreference
        android:icon="@drawable/ic_cfg_web"
        android:title="@string/web_service"
        android:key="webService"
        android:summary="@string/web_service_desc"
        android:defaultValue="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false"/>
    <io.legado.app.lib.prefs.PreferenceCategory
        android:title="@string/setting"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false">
        <io.legado.app.lib.prefs.Preference
            android:icon="@drawable/ic_cfg_backup"
            android:title="@string/backup_restore"
            android:key="web_dav_setting"
            android:summary="@string/web_dav_set_import_old"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.Preference
            android:icon="@drawable/ic_cfg_theme"
            android:title="@string/theme_setting"
            android:key="theme_setting"
            android:summary="@string/theme_setting_s"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.Preference
            android:icon="@drawable/ic_cfg_other"
            android:title="@string/other_setting"
            android:key="setting"
            android:summary="@string/other_setting_s"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false"/>
    </io.legado.app.lib.prefs.PreferenceCategory>
    <io.legado.app.lib.prefs.PreferenceCategory
        android:title="@string/other"
        android:key="aboutCategory"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false"
        app:layout="@layout/view_preference_category">
        <io.legado.app.lib.prefs.Preference
            android:icon="@drawable/ic_bookmark"
            android:title="@string/bookmark"
            android:key="bookmark"
            android:summary="@string/all_bookmark"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.Preference
            android:icon="@drawable/ic_history"
            android:title="@string/read_record"
            android:key="readRecord"
            android:summary="@string/read_record_summary"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.Preference
            android:icon="@drawable/ic_folder_outline"
            android:title="@string/file_manage"
            android:key="fileManage"
            android:summary="@string/file_manage_summary"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.Preference
            android:icon="@drawable/ic_cfg_about"
            android:title="@string/about"
            android:key="about"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.Preference
            android:icon="@drawable/ic_exit"
            android:title="@string/exit"
            android:key="exit"
            app:iconSpaceReserved="false"/>
    </io.legado.app.lib.prefs.PreferenceCategory>
</androidx.preference.PreferenceScreen>
