<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <io.legado.app.lib.prefs.PreferenceCategory
        android:title="@string/aloud_config"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false">
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/ignore_audio_focus_title"
            android:key="ignoreAudioFocus"
            android:summary="@string/ignore_audio_focus_summary"
            android:defaultValue="false"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/pause_read_aloud_while_phone_calls_title"
            android:key="pauseReadAloudWhilePhoneCalls"
            android:summary="@string/pause_read_aloud_while_phone_calls_summary"
            android:defaultValue="false"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/read_aloud_wake_lock"
            android:key="readAloudWakeLock"
            android:summary="@string/read_aloud_wake_lock_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/read_aloud_float_window"
            android:key="readAloudFloatWindow"
            android:summary="@string/read_aloud_float_window_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/read_aloud_float_click_swap"
            android:key="readAloudFloatClickSwap"
            android:summary="@string/read_aloud_float_click_swap_summary"
            android:dependency="readAloudFloatWindow"
            android:defaultValue="false"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.EditTextPreference
            android:maxLines="1"
            android:title="@string/read_aloud_float_edge_offset"
            android:key="readAloudFloatEdgeOffset"
            android:summary="@string/read_aloud_float_edge_offset_summary"
            android:dependency="readAloudFloatWindow"
            android:defaultValue="0"
            android:inputType="numberSigned"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/read_aloud_back_to_background"
            android:key="readAloudBackToBackground"
            android:summary="@string/read_aloud_back_to_background_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/system_media_control_compatibility_change"
            android:key="systemMediaControlCompatibilityChange"
            android:summary="@string/system_media_control_compatibility_change_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/pref_media_button_per_next"
            android:key="mediaButtonPerNext"
            android:summary="@string/pref_media_button_per_next_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/read_aloud_by_page"
            android:key="readAloudByPage"
            android:summary="@string/read_aloud_by_page_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/read_aloud_start_from_first"
            android:key="readAloudStartFromFirst"
            android:summary="@string/read_aloud_start_from_first_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/stream_read_aloud_audio"
            android:key="streamReadAloudAudio"
            android:summary="@string/stream_read_aloud_audio_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.EditTextPreference
            android:title="手动指定引擎包名"
            android:key="sysTtsPackageName"
            android:summary="当系统无法枚举到TTS引擎时，手动输入包名"
            android:defaultValue=""
            android:inputType="text"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.EditTextPreference
            android:maxLines="1"
            android:title="@string/sys_tts_synthesize_timeout"
            android:key="sysTtsSynthesizeTimeout"
            android:summary="@string/sys_tts_synthesize_timeout_summary"
            android:defaultValue="120"
            android:inputType="number"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.EditTextPreference
            android:maxLines="1"
            android:title="@string/tts_retry_count"
            android:key="ttsRetryCount"
            android:summary="@string/tts_retry_count_summary"
            android:defaultValue="3"
            android:inputType="number"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/tts_retry_skip_on_fail"
            android:key="ttsRetrySkipOnFail"
            android:summary="@string/tts_retry_skip_on_fail_summary"
            android:defaultValue="true"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.Preference
            android:title="@string/speak_engine"
            android:key="appTtsEngine"
            android:summary="TTS"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.Preference
            android:title="@string/sys_tts_config"
            android:key="sysTtsConfig"
            android:summary="@string/sys_tts_config_summary"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.EditTextPreference
            android:title="听书预加载数量(章节)"
            android:key="audioPreDownloadNum"
            android:summary="设置听书时预先下载的章节数量"
            android:defaultValue="1"
            android:inputType="number"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.EditTextPreference
            android:title="音频缓存保留时间(分钟)，输入 0 为退出即刻清理"
            android:key="audioCacheCleanTime"
            android:summary="听书缓存文件保留多久后自动删除，输入 0 代表退出即刻清理"
            android:defaultValue="1"
            android:inputType="number"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/convert_cache_to_wav"
            android:key="convertCacheToWav"
            android:summary="@string/convert_cache_to_wav_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/auto_merge_audio_on_chapter_end"
            android:key="autoMergeAudioOnChapterEnd"
            android:summary="@string/auto_merge_audio_on_chapter_end_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/convert_to_mp3_after_merge"
            android:key="convertToMp3AfterMerge"
            android:summary="@string/convert_to_mp3_after_merge_summary"
            android:dependency="autoMergeAudioOnChapterEnd"
            android:defaultValue="false"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/save_text_with_merge"
            android:key="saveTextWithMerge"
            android:summary="@string/save_text_with_merge_summary"
            android:dependency="autoMergeAudioOnChapterEnd"
            android:defaultValue="false"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.EditTextPreference
            android:maxLines="1"
            android:title="@string/short_audio_min_duration"
            android:key="shortAudioMinDuration"
            android:summary="@string/short_audio_min_duration_summary"
            android:defaultValue="0.3"
            android:inputType="numberDecimal"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.EditTextPreference
            android:maxLines="1"
            android:title="@string/srt_subtitle_max_chars"
            android:key="srtSubtitleMaxChars"
            android:summary="@string/srt_subtitle_max_chars_summary"
            android:dependency="saveTextWithMerge"
            android:defaultValue="15"
            android:inputType="number"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.EditTextPreference
            android:maxLines="1"
            android:title="@string/srt_subtitle_time_offset"
            android:key="srtSubtitleTimeOffset"
            android:summary="@string/srt_subtitle_time_offset_summary"
            android:dependency="saveTextWithMerge"
            android:defaultValue="0"
            android:inputType="numberDecimal"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.EditTextPreference
            android:maxLines="1"
            android:title="@string/srt_silence_match_range"
            android:key="srtSilenceMatchRange"
            android:summary="@string/srt_silence_match_range_summary"
            android:dependency="saveTextWithMerge"
            android:defaultValue="0.5"
            android:inputType="numberDecimal"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/show_read_aloud_cover_subtitle"
            android:key="showReadAloudCoverSubtitle"
            android:summary="@string/show_read_aloud_cover_subtitle_summary"
            android:defaultValue="true"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.EditTextPreference
            android:maxLines="1"
            android:title="@string/read_aloud_cover_width"
            android:key="readAloudCoverWidth"
            android:summary="@string/read_aloud_cover_width_summary"
            android:defaultValue="240"
            android:inputType="number"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/read_aloud_cover_marquee"
            android:key="readAloudCoverMarqueeEnabled"
            android:summary="@string/read_aloud_cover_marquee_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.EditTextPreference
            android:maxLines="1"
            android:title="@string/read_aloud_cover_marquee_speed"
            android:key="readAloudCoverMarqueeSpeed"
            android:summary="@string/read_aloud_cover_marquee_speed_summary"
            android:defaultValue="3000"
            android:inputType="number"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/marquee_bgm_link"
            android:key="marqueeBgmLinkEnabled"
            android:summary="@string/marquee_bgm_link_summary"
            android:defaultValue="true"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/show_role_annotation"
            android:key="showRoleAnnotation"
            android:summary="@string/show_role_annotation_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.EditTextPreference
            android:maxLines="1"
            android:title="@string/role_annotation_offset"
            android:key="roleAnnotationOffset"
            android:summary="@string/role_annotation_offset_summary"
            android:dependency="showRoleAnnotation"
            android:defaultValue="0"
            android:inputType="numberSigned"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/show_audio_cache_indicator"
            android:key="showAudioCacheIndicator"
            android:summary="@string/show_audio_cache_indicator_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"/>
    </io.legado.app.lib.prefs.PreferenceCategory>
</androidx.preference.PreferenceScreen>
