<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_refresh_black_24dp"
        android:id="@+id/menu_rss_refresh"
        android:title="@string/refresh"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/ic_star_border"
        android:id="@+id/menu_rss_star"
        android:title="@string/favorite"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/ic_share"
        android:id="@+id/menu_share_it"
        android:title="@string/share"
        app:showAsAction="ifRoom"/>
    <item
        android:icon="@drawable/ic_volume_up"
        android:id="@+id/menu_aloud"
        android:title="@string/read_aloud"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_login"
        android:title="@string/login"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_browser_open"
        android:title="@string/open_in_browser"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_read_record"
        android:title="@string/read_record"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_edit_source"
        android:title="@string/edit_source"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_log"
        android:title="@string/log"
        app:showAsAction="never"/>
</menu>
